LHC-1843 rename
