# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-phloem/osb-koroneiki-phloem-rest-impl/rest-openapi.yaml
@@ -288,7 +288,7 @@ components:
                 - firstName
                 - lastName
             type: object
-        ContactAccountContactRoles:
+        ContactAccountView:
             properties:
                 account:
                     $ref: "#/components/schemas/Account"
@@ -2233,76 +2233,6 @@ paths:
                     description:
                         ""
             tags: ["AuditEntry"]
-    "/contact-account-contact-roles/by-okta-id/{oktaId}":
-        get:
-            description:
-                Retrieves the contact's account contact roles.
-            operationId: getContactAccountContactRolesByOktaIdPage
-            parameters:
-                - in: path
-                  name: oktaId
-                  required: true
-                  schema:
-                      type: string
-                - in: query
-                  name: page
-                  schema:
-                      type: integer
-                - in: query
-                  name: pageSize
-                  schema:
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ContactAccountContactRoles"
-                                type: array
-                        application/xml:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ContactAccountContactRoles"
-                                type: array
-                    description:
-                        ""
-            tags: ["ContactAccountContactRoles"]
-    "/contact-account-contact-roles/by-uuid/{contactUuid}":
-        get:
-            description:
-                Retrieves the contact's account contact roles.
-            operationId: getContactAccountContactRolesByUuidPage
-            parameters:
-                - in: path
-                  name: contactUuid
-                  required: true
-                  schema:
-                      type: string
-                - in: query
-                  name: page
-                  schema:
-                      type: integer
-                - in: query
-                  name: pageSize
-                  schema:
-                      type: integer
-            responses:
-                200:
-                    content:
-                        application/json:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ContactAccountContactRoles"
-                                type: array
-                        application/xml:
-                            schema:
-                                items:
-                                    $ref: "#/components/schemas/ContactAccountContactRoles"
-                                type: array
-                    description:
-                        ""
-            tags: ["ContactAccountContactRoles"]
     "/contact-roles":
         get:
             description:
@@ -2807,6 +2737,41 @@ paths:
                     description:
                         ""
             tags: ["AuditEntry"]
+    "/contacts/by-okta-id/{oktaId}/contact-account-views":
+        get:
+            description:
+                Retrieves the contact's accounts and associated contact roles.
+            operationId: getContactByOktaContactAccountViewsPage
+            parameters:
+                - in: path
+                  name: oktaId
+                  required: true
+                  schema:
+                      type: string
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/ContactAccountView"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/ContactAccountView"
+                                type: array
+                    description:
+                        ""
+            tags: ["ContactAccountView"]
     "/contacts/by-okta-id/{oktaId}/contact-permissions":
         delete:
             operationId: deleteContactByOktaContactPermission
@@ -3139,6 +3104,41 @@ paths:
                     description:
                         ""
             tags: ["AuditEntry"]
+    "/contacts/by-uuid/{contactUuid}/contact-account-views":
+        get:
+            description:
+                Retrieves the contact's accounts and associated contact roles.
+            operationId: getContactByUuidContactUuidContactAccountViewsPage
+            parameters:
+                - in: path
+                  name: contactUuid
+                  required: true
+                  schema:
+                      type: string
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/ContactAccountView"
+                                type: array
+                        application/xml:
+                            schema:
+                                items:
+                                    $ref: "#/components/schemas/ContactAccountView"
+                                type: array
+                    description:
+                        ""
+            tags: ["ContactAccountView"]
     "/contacts/by-uuid/{contactUuid}/contact-permissions":
         delete:
             operationId: deleteContactByUuidContactUuidContactPermission
